--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
     --cor-fundo: #01080E;
-    --cor-principal: #0B0D20 ;
+    --cor-principal: #070505 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
+    --cor-destaque: #7e0a4e;
     --cor-texto: #D7F9FF;
 }
   
